Fix find box bug after navigation.

The bug is that after searching for a string that is not on the page, if
you then navigate to a page that DOES contain that string, find-in-page
will still find no matches.

What is actually happening in the search after navigation is that even
though TextFinder::find() is returning true (to indicate that a match is
found), the field |m_lastFindRequestCompletedWithNoMatches| is still
false (from the last page, which had no matches). This prevents any
matches from being highlighted during the subsequent scoping effort.

The simple (and correct) fix is to set
|m_lastFindRequestCompletedWithNoMatches| to false if a match is found
in TextFinder::find() (since the find request no longer has no matches).

BUG=644448

Review-Url: https://codereview.chromium.org/2316203002
Cr-Commit-Position: refs/heads/master@{#417095}

Former-commit-id: d3b32d5fe57bf7cf749d057e1944321735ae8e1e